--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <script src="three.js"></script>
-        <script src="main.js"></script>
+        <script src="js/lib/three.js"></script>
+        <script src="js/src/main.js"></script>
     </body>
 </html>
