--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     </head>
 
     <body>
+        <script src="js/lib/lodash.js"></script>
         <script src="js/lib/three.js"></script>
+        <script src="js/lib/sylvester.js"></script>
         <script src="js/src/main.js"></script>
     </body>
 </html>
