--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <script src="js/lib/lodash.js"></script>
         <script src="js/lib/three.js"></script>
         <script src="js/lib/sylvester.js"></script>
+        
+        <script src="js/src/config.js"></script>
+        <script src="js/src/Tetromino.js"></script>
         <script src="js/src/main.js"></script>
     </body>
 </html>
