Each field tile has now a type to describe its occupation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <script src="js/src/config.js"></script>
         <script src="js/src/Tetromino.js"></script>
+        <script src="js/src/Tile.js"></script>
         <script src="js/src/main.js"></script>
     </body>
 </html>
