--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+        <script src="js/lib/lodash.js"></script>
         <script src="js/lib/three.js"></script>
         <script src="js/lib/sylvester.js"></script>
         
