Added touch controls

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <script src="js/lib/lodash.js"></script>
         <script src="js/lib/three.js"></script>
         <script src="js/lib/sylvester.js"></script>
+        <script src="js/lib/hammer.js"></script>
+        <script src="js/lib/hammer-time.js"></script>
         
         <script src="js/src/config.js"></script>
         <script src="js/src/Tetromino.js"></script>
