--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
 
     <body>
+        <div id="text">TETREZ</div>
+
         <script src="js/lib/lodash.js"></script>
         <script src="js/lib/three.js"></script>
         <script src="js/lib/sylvester.js"></script>
