Styled opening screen

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     </head>
 
     <body>
-        <div id="text">TETREZ</div>
+        <div id="screen">
+            <div id="title">
+                <span>T</span><span>E</span><span>T</span><span>R</span><span>E</span><span>Z</span>
+            </div>
+
+            <div id="start">GO</div>
+        </div>
 
         <script src="js/lib/lodash.js"></script>
         <script src="js/lib/three.js"></script>
