--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             </div>
         </div>
 
+        <canvas id="canvas"></canvas>
+
         <script src="js/lib/lodash.js"></script>
         <script src="js/lib/three.js"></script>
         <script src="js/lib/sylvester.js"></script>
@@ -23,7 +25,9 @@
         <script src="js/src/config.js"></script>
         <script src="js/src/Tetromino.js"></script>
         <script src="js/src/Tile.js"></script>
+        <script src="js/src/view.js"></script>
         <script src="js/src/field.js"></script>
+        <script src="js/src/controller.js"></script>
         <script src="js/src/main.js"></script>
     </body>
 </html>
