Can play endlessly

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <script src="js/src/config.js"></script>
         <script src="js/src/Tetromino.js"></script>
         <script src="js/src/Tile.js"></script>
+        <script src="js/src/Queue.js"></script>
         <script src="js/src/view.js"></script>
         <script src="js/src/field.js"></script>
         <script src="js/src/controller.js"></script>
