--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script src="js/lib/sylvester.js"></script>
         <script src="js/lib/hammer.js"></script>
         <script src="js/lib/hammer-time.js"></script>
+        <script src="js/lib/soundjs-0.6.2.combined.js"></script>
         
         <script src="js/src/config.js"></script>
         <script src="js/src/Tetromino.js"></script>
