--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
 
             <div id="loading">Loading</div>
-            <div id="play">Start<img class="speaker" src="images/speaker.svg"></div>
+            <div id="play">Start<img class="icon speaker" src="images/speaker.svg"></div>
         </div>
 
         <div id="gameOverScreen" class="screen transparent">
@@ -23,7 +23,7 @@
                 <span>T</span><span>E</span><span>T</span><span>R</span><span>E</span><span>Z</span>
             </div>
 
-            <div>Gameover<img class="speaker" src="images/reload.svg"></div>
+            <div>Gameover<img class="icon reload" src="images/reload.svg"></div>
         </div>
 
         <canvas id="canvas"></canvas>
