--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <script src="js/src/Queue.js"></script>
         <script src="js/src/view.js"></script>
         <script src="js/src/field.js"></script>
+        <script src="js/src/bassSequencer.js"></script>
         <script src="js/src/controller.js"></script>
         <script src="js/src/main.js"></script>
     </body>
