--- a/index.html
+++ b/index.html
@@ -9,21 +9,15 @@
     </head>
 
     <body>
-        <div id="titleScreen" class="screen">
-            <div class="title">
+        <div id="screen">
+            <div id="title">
                 <span>T</span><span>E</span><span>T</span><span>R</span><span>E</span><span>Z</span>
             </div>
 
             <div id="loading">Loading</div>
             <div id="play">Start<img class="icon speaker" src="images/speaker.svg"></div>
-        </div>
-
-        <div id="gameOverScreen" class="screen transparent">
-            <div class="title">
-                <span>T</span><span>E</span><span>T</span><span>R</span><span>E</span><span>Z</span>
-            </div>
-
-            <div>Gameover<img class="icon reload" src="images/reload.svg"></div>
+            <div id="gameOver">Gameover<img class="icon reload" src="images/reload.svg"></div>
+            <div id="score">Score</div>
         </div>
 
         <canvas id="canvas"></canvas>
