--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 
     <canvas id="canvas"></canvas>
 
+    <script>
+      // Needed to enable CreateJS
+      window.global = window
+    </script>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
